fix bug css top header for burger menu on mobile

--- a/Resources/public/less/header.less
+++ b/Resources/public/less/header.less
@@ -1140,6 +1140,9 @@ html:not(.touch){
       #content-wrapper {
         #top-header {
           left: 250px;
+          .headertoprighticons {
+            right: 275px;
+          }
         }
       }
     }
